# fpotencia

./: .clang-format  .clang-tidy  .gitignore  .gitpod.yml  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  config.h.in
.devcontainer/: Dockerfile  devcontainer.json
profile/: CMakeLists.txt  profile.cpp
src/: Bus.cpp  Bus.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CommonFunctions.cpp  CommonFunctions.h  ExternalGrid.cpp  ExternalGrid.h  Generator.cpp  Generator.h  Line.cpp  Line.h  LineConstructors.cpp  LineConstructors.h  LineType.cpp  LineType.h  Load.cpp  Load.h  Node.cpp  Node.h  Shunt.cpp  Shunt.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  Solver_NRcurrent.cpp  Solver_NRcurrent.h  Solver_NRpolar.cpp  Solver_NRpolar.h  Transformer.cpp  Transformer.h  TransformerConstructors.cpp  TransformerConstructors.h  Types.h  UnfittingSolverException.cpp  UnfittingSolverException.h  enumaratons.h  fpotencia.h  (+1 more)
src/backup/: LineConstructors.cpp  LineConstructors.h  Solver_Jacobi.cpp  Solver_Jacobi.h  Solver_NRrect.cpp  Solver_NRrect.h  Solver_ZBusGS.cpp  Solver_ZBusGS.h
src/test/: gridExamples.h  main.cpp
test/: CMakeLists.txt  NRcurrentSolverTest.cpp  NRcurrentSolverTest.h  NRpolarSolverTest.cpp  NRpolarSolverTest.h  NRrectSolverTest.h  SolverTest.cpp  SolverTest.h  ZBusGSSolverTest.cpp  nr-current-solver-test.cpp  nr-polar-solver-test.cpp  test-models.cpp  test-models.h
test/backup/: JacobiSolverTest.cpp  JacobiSolverTest.h  NRrectSolverTest.cpp  ZBusGSSolverTest.h
